--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,20 @@
 .fa-arrow-right{
     left: 105%;
 }
+
+#tumb{
+    width: 800px;
+    height: 100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#tumb img{
+    width: 19%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    cursor: pointer;
+}
