--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 body{
     background-color: #95C8DC;
+    font-family: san-serif;
+    font-size: 20px;
 }
 
 .conatiner{
@@ -24,16 +26,32 @@ body{
     height: 100%;
 }
 
+.gallery figure {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: relative;
+}
+
+.gallery figcaption {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    left: 20px;
+    text-align: right;
+    color: #fff;
+    text-shadow: 0 0 15px #000;
+}
+
 .gallery img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
     cursor: pointer;
-    display: none;
 }
 
-.gallery img.active {
+.gallery figure.active {
     display: block;
 }
 
